--- a/index.html
+++ b/index.html
@@ -1,19 +1,15 @@
 !DOCTYPE html>
 <html>
 	<head>
-		<title>OWen Dall</title>
+		<title>Owen Dall</title>
 		<!-- link to main stylesheet -->
 		<link rel="stylesheet" type="text/css" href="/css/base.cs
 	</head>
 	<body>
-		<nav>
-    		<ul>
-        		<li><a href="/">Home</a></li>
-	        	<li><a href="/about">About</a></li>
-        		<li><a href="/cv">CV</a></li>
-        		<li><a href="/blog">Blog</a></li>
-    		</ul>
-		</nav>
+	       -------------------------
+		layout: default
+		title: Owen Dall, CTO
+               ------------------------
 		<div class="container">
     		<div class="blurb">
         		<h1>Hi there, I'm Owen Dall!</h1>
