--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 
-	        ---
-		layout: default
-		title: Owen Dall, CTO
-                ---
-		<div class="container">
-    		<div class="blurb">
-        		<h1>Hi there, I'm Owen Dall!</h1>
-				<p>Vice Presient and CTO of Barquin International <a href="/about">Read more about me.</a></p>
-    		</div><!-- /.blurb -->
-		</div><!-- /.container -->
+---
+layout: defaul
+title: Owen Dall, CTO
+---
+<div class="container">
+   <div class="blurb">
+       	<h1>Hi there, I'm Owen Dall!</h1>
+	<p>Vice Presient and CTO of Barquin International <a href="/about">Read more about me.</a></p>
+   </div><!-- /.blurb -->
+  </div><!-- /.container -->
 	
